oss/yaml/ttyd/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ttyd
  namespace: ttyd
spec:
  selector:
    app: ttyd
  ports:
    - port: 443
      targetPort: 7681
      protocol: TCP
