oss/yaml/ttyd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stdtrinfra-ingress-ttyd
  namespace: ttyd
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-url: "https://ttyd.stdtrinfra.com/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://ttyd.stdtrinfra.com/oauth2/start?rd=$scheme://$host$request_uri"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/auth-response-headers: "Authorization,x-auth-request-user,x-auth-request-email,x-auth-request-access-token"
    nginx.ingress.kubernetes.io/proxy-set-headers: "proxy-set-headers"
    #nginx.ingress.kubernetes.io/websocket-services: "ttyd"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - "*.stdtrinfra.com"
      secretName: stdtrinfra-tls
  rules:
    - host: ttyd.stdtrinfra.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ttyd-svc
                port:
                  number: 443
